<resources>
    <string name="app_name">Serenity</string>
    <string name="sms_suspect">Liste des SMS suspects</string>
    <string name="google_app_id">1067911358612</string>
    <string name="action_quitter">Quitter</string>
    <string name="action_synchro">Synchroniser</string>
    <string name="action_sms">SMS suspects</string>
    <string name="action_actualiser">Actualiser</string>
    <string name="action_config">Configuration</string>
    <string name="title_activity_settings">Parametrage</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Numero</string>
    <string name="pref_default_display_name"></string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Freaquence de Sync.</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>3 heures</item>
        <item>6 heures</item>
        <item>Jamain</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_no_result">Aucun élément</string>
    <string name="iconify_title_valider">{fa-check} Envoi à Serenity</string>
    <string name="iconify_ajout_contact">{fa-plus} Contacts</string>
    <string name="prompt_numero">Votre numéro (+225xxxxxxxx)</string>
</resources>
